Updated MakeFile, README, AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-quentin-abel-marceau ABEL-MARCEAU Quentin
+quentin.abel-marceau ABEL-MARCEAU Quentin
 ronan.pedron PEDRON Ronan
-matthieu.camart CAMAR Matthieu
+matthieu.camart CAMART Matthieu
 renaud-dov.devers DEVERS Renaud-Dov
